# fastapi-docker-compose

./: Dockerfile  Makefile  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
.github/workflows/: deploy.yaml
alembic/: env.py
alembic/versions/: 8b63052092c9_init_db.py
app/: main.py
app/.github/workflows/: deploy.yaml
app/core/: settings.py
app/models/: database.py  engine.py
app/routes/: user_routes.py
app/schema/: user.py
app/services/: user_service.py
app/utils/: generate_id.py
